--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,8 +225,19 @@ string(CONCAT OPEN3D_VERSION
     ".${OPEN3D_VERSION_PATCH}"
 )
 set(OPEN3D_VERSION_FULL "${OPEN3D_VERSION}${OPEN3D_VERSION_DEVHASH}")
+# Set additional info
+set(PROJECT_EMAIL       "info@open3d.org")
+set(PROJECT_DOCS        "http://www.open3d.org/docs")
+set(PROJECT_CODE        "https://github.com/isl-org/Open3D")
+set(PROJECT_ISSUES      "https://github.com/isl-org/Open3D/issues")
 
-project(Open3D VERSION ${OPEN3D_VERSION} LANGUAGES C CXX)
+project(Open3D
+    VERSION ${OPEN3D_VERSION}
+    # Set PROJECT_DESCRIPTION
+    DESCRIPTION "Open3D: A Modern Library for 3D Data Processing."
+    # Set PROJECT_HOMEPAGE_URL
+    HOMEPAGE_URL "http://www.open3d.org"
+    LANGUAGES C CXX)
 message(STATUS "Open3D ${OPEN3D_VERSION_FULL}")
 
 # FIXME: Remove this workaround once a fixed Visual Studio 16.10 version is released.
@@ -281,13 +292,6 @@ string(CONCAT PROJECT_VERSION_THREE_NUMBER "${OPEN3D_VERSION_MAJOR}"
 if(NOT DEFINED PYPI_PACKAGE_NAME)
     set(PYPI_PACKAGE_NAME "open3d")
 endif()
-
-# Set additional info
-set(PROJECT_EMAIL   "info@open3d.org")
-set(PROJECT_HOME    "http://www.open3d.org")
-set(PROJECT_DOCS    "http://www.open3d.org/docs")
-set(PROJECT_CODE    "https://github.com/isl-org/Open3D")
-set(PROJECT_ISSUES  "https://github.com/isl-org/Open3D/issues")
 
 # Set installation paths
 if(UNIX OR CYGWIN)
@@ -478,6 +482,8 @@ if (Python3_EXECUTABLE)
         COMMENT "Python executable used for style check: ${Python3_EXECUTABLE}."
     )
 endif()
+
+include(Open3DPackaging)
 
 # `make check-cpp-style` checks style for c++/cuda files.
 # This works outside of python virtualenv.
