--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     types: [opened, reopened, synchronize] # Rebuild on new pushes to PR
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   style-check:
     runs-on: ubuntu-20.04     # No need for cmake repo
