--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   GCE_CLI_GHA_VERSION: '302.0.0'      # Fixed to avoid dependency on API changes
 
@@ -17,10 +21,6 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - name: Cancel outdated
-        uses: fkirc/skip-duplicate-actions@master
-        with:
-          github_token: ${{ github.token }}
       - name: Checkout source code
         uses: actions/checkout@v2
       - name: Maximize build space
@@ -60,10 +60,6 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - name: Cancel outdated
-        uses: fkirc/skip-duplicate-actions@master
-        with:
-          github_token: ${{ github.token }}
       - name: Checkout source code
         uses: actions/checkout@v2
       - name: Maximize build space
