Optimized GPU Knn Search (#4545)

--- a/cpp/open3d/core/CMakeLists.txt
+++ b/cpp/open3d/core/CMakeLists.txt
@@ -111,6 +111,8 @@ if (BUILD_CUDA_MODULE)
     target_sources(core PRIVATE
         nns/KnnSearchOps.cu
         nns/FixedRadiusSearchOps.cu
+        nns/kernel/BlockSelectFloat32.cu
+        nns/kernel/BlockSelectFloat64.cu
     )
 endif()
 
@@ -125,11 +127,6 @@ if (BUILD_ISPC_MODULE)
     )
 endif()
 
-if (WITH_FAISS)
-    target_sources(core PRIVATE
-        nns/FaissIndex.cpp
-    )
-endif()
 
 open3d_show_and_abort_on_warning(core)
 open3d_set_global_properties(core)
