--- a/.github/ISSUE_TEMPLATE/1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.yml
@@ -116,19 +116,19 @@ body:
   attributes:
     label: "Open3D, Python and System information"
     value: >
-      - Operating system: (e.g. OSX 10.15, Ubuntu 18.04, Windows 10 64-bit)
+      - Operating system: Ubuntu 20.04 / macOS 10.15 / Windows 10 64-bit
 
-      - Python version: (e.g. Python 3.8 / output from `import sys  print(sys.version)`)
+      - Python version: Python 3.8 / output from `import sys; print(sys.version)`
 
-      - Open3D version: (output from python: `print(open3d.__version__)`)
+      - Open3D version: output from python: `print(open3d.__version__)`
 
-      - System type: (x84 / arm64 / apple-silicon / jetson / rpi)
+      - System architecture: x86 / arm64 / apple-silicon / jetson / rpi
 
-      - Is this remote workstation?: yes or no
+      - Is this a remote workstation?: yes or no
 
-      - How did you install Open3D?: (e.g. pip, conda, build from source)
+      - How did you install Open3D?: pip / conda / build from source
 
-      - Compiler version (if built from source): (e.g. gcc 7.5, clang 7.0)
+      - Compiler version (if built from source): gcc 7.5 / clang 7.0
     render: markdown
   validations:
     required: true
