Add option USE_SYSTEM_ASSIMP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ if(USE_BLAS)
 else()
     option(USE_SYSTEM_BLAS        "Use system pre-installed openblas"        ON )
 endif()
+option(USE_SYSTEM_ASSIMP          "Use system pre-installed assimp"          OFF)
 option(USE_SYSTEM_EIGEN3          "Use system pre-installed eigen3"          OFF)
 option(USE_SYSTEM_FILAMENT        "Use system pre-installed filament"        OFF)
 option(USE_SYSTEM_FMT             "Use system pre-installed fmt"             OFF)
