--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -52,6 +52,11 @@ open3d_add_example(PoseGraph)
 open3d_add_example(ProgramOptions)
 open3d_add_example(GeneralizedICP)
 open3d_add_example(RegistrationColoredICP)
+if (TARGET Open3D::3rdparty_openmp)
+    open3d_add_example(RegistrationDopplerICP Open3D::3rdparty_openmp)
+else()
+    open3d_add_example(RegistrationDopplerICP)
+endif()
 open3d_add_example(RegistrationRANSAC)
 open3d_add_example(RGBDOdometry)
 open3d_add_example(SLAC)
