--- a/cpp/open3d/Open3D.h.in
+++ b/cpp/open3d/Open3D.h.in
@@ -78,6 +78,7 @@
 #include "open3d/pipelines/integration/UniformTSDFVolume.h"
 #include "open3d/pipelines/odometry/Odometry.h"
 #include "open3d/pipelines/registration/ColoredICP.h"
+#include "open3d/pipelines/registration/DopplerICP.h"
 #include "open3d/pipelines/registration/Feature.h"
 #include "open3d/pipelines/registration/GeneralizedICP.h"
 #include "open3d/pipelines/registration/Registration.h"
