--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -109,7 +109,8 @@ jobs:
               --boot-disk-size="128GB" \
               --boot-disk-type="pd-ssd" \
               --image-family="ubuntu-os-docker-gpu-2004-lts" \
-              --scopes "https://www.googleapis.com/auth/devstorage.full_control" \
+              --metadata-from-file=startup-script=./util/gcloud_auto_clean.sh \
+              --scopes="storage-full,compute-rw" \
               --service-account="$GCE_GPU_CI_SA"; do
               ((ZONE_ID = ZONE_ID + 1))
           done
