--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -75,8 +75,8 @@ if (BUILD_GUI)
     open3d_add_example(Draw)
     open3d_add_example(MultipleWindows       Open3D::3rdparty_threads)
     open3d_add_example(OffscreenRendering)
-    open3d_add_example(TICPOdometry          Open3D::3rdparty_threads)
-    open3d_add_example(TICPReconstruction    Open3D::3rdparty_threads)
+    open3d_add_example(TICPSequential        Open3D::3rdparty_threads)
+    open3d_add_example(TICP                  Open3D::3rdparty_threads)
     open3d_add_example(DenseSLAMGUI          Open3D::3rdparty_threads)
 endif()
 
