set windows version to windows-2019

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -35,7 +35,7 @@ env:
 
 jobs:
   windows:
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       matrix:
@@ -217,7 +217,7 @@ jobs:
 
   build-wheel:
     name: Build wheel
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
@@ -335,7 +335,7 @@ jobs:
 
   test-wheel:
     name: Test wheel
-    runs-on: windows-latest
+    runs-on: windows-2019
     needs: [build-wheel]
     strategy:
       fail-fast: false
