--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -56,15 +56,13 @@ jobs:
       - name: Config and build
         run: |
           ./util/run_ci.sh
-          DEVEL_PKG_NAME="$(basename package/open3d-devel-*.tar.xz)"
-          echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME" >> $GITHUB_ENV
 
       - name: Upload package
         if: ${{ env.SHARED == 'ON' }}
         uses: actions/upload-artifact@v2
         with:
           name: open3d-devel-linux-x86_64
-          path: build/package/${{ env.DEVEL_PKG_NAME }}
+          path: build/package/open3d-devel-*.tar.xz
           if-no-files-found: error
 
       - name: GCloud CLI setup
@@ -80,5 +78,5 @@ jobs:
       - name: Upload package to GCS bucket
         if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
-          gsutil cp build/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
+          gsutil cp build/package/open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
