ignore docker artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *.whl
 
+# Docker build artifacts (wheel, dev package, ccache)
+docker/*.tar.gz
+docker/*.tar.xz
+
 # Windows build temp cmake file
 CMakeSettings.json
 
