--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -37,34 +37,35 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: Maximize build space
         run: |
           source util/ci_utils.sh
           maximize_ubuntu_github_actions_build_space
-
-      - name: Set up Python version
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.6
-
-      # Pre-installed 18.04 packages: https://git.io/JfHmW
-      - name: Install dependencies
+      - name: Docker build
         run: |
-          ./util/install_deps_ubuntu.sh assume-yes
-
-      - name: Config and build
+          if   [ "${{ matrix.SHARED }}" = "OFF" ] && [ "${{ matrix.MLOPS }}" = "OFF" ]; then
+            docker/docker_build.sh cpu-static
+          elif [ "${{ matrix.SHARED }}" = "ON"  ] && [ "${{ matrix.MLOPS }}" = "OFF" ]; then
+            docker/docker_build.sh cpu-shared
+          elif [ "${{ matrix.SHARED }}" = "ON"  ] && [ "${{ matrix.MLOPS }}" = "ON"  ]; then
+            docker/docker_build.sh cpu-shared-ml
+          fi
+      - name: Docker test
         run: |
-          ./util/run_ci.sh
-
+          if   [ "${{ matrix.SHARED }}" = "OFF" ] && [ "${{ matrix.MLOPS }}" = "OFF" ]; then
+            docker/docker_test.sh cpu-static
+          elif [ "${{ matrix.SHARED }}" = "ON"  ] && [ "${{ matrix.MLOPS }}" = "OFF" ]; then
+            docker/docker_test.sh cpu-shared
+          elif [ "${{ matrix.SHARED }}" = "ON"  ] && [ "${{ matrix.MLOPS }}" = "ON"  ]; then
+            docker/docker_test.sh cpu-shared-ml
+          fi
       - name: Upload package to GitHub artifacts
         if: ${{ env.SHARED == 'ON' }}
         uses: actions/upload-artifact@v2
         with:
           name: open3d-devel-linux-x86_64
-          path: build/package/open3d-devel-*.tar.xz
+          path: docker/open3d-devel-*.tar.xz
           if-no-files-found: error
-
       - name: GCloud CLI setup
         if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
@@ -74,9 +75,8 @@ jobs:
           service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
           project_id: ${{ secrets.GCE_DOCS_PROJECT }}
           export_default_credentials: true
-
       - name: Upload package to GCS bucket
         if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
-          gsutil cp build/package/open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
+          gsutil cp docker/open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
