--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: open3d-devel-linux-x86_64
-          path: docker/open3d-devel-*.tar.xz
+          path: open3d-devel-*.tar.xz
           if-no-files-found: error
       - name: GCloud CLI setup
         if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
@@ -86,5 +86,5 @@ jobs:
       - name: Upload package to GCS bucket
         if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
-          gsutil cp docker/open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
+          gsutil cp open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
