--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -75,7 +75,7 @@ jobs:
           path: open3d-devel-*.tar.xz
           if-no-files-found: error
       - name: GCloud CLI setup
-        # if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -84,7 +84,7 @@ jobs:
           project_id: ${{ secrets.GCE_DOCS_PROJECT }}
           export_default_credentials: true
       - name: Upload package to GCS bucket
-        # if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
           gsutil cp open3d-devel-*.tar.xz gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
